<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/natural"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/d150">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/d150"
                android:scaleType="centerCrop"
                android:src="@drawable/background" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@color/primary_light"
                android:padding="@dimen/d8"
                android:text="@string/appText"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/s24"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Kuningan-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/d8"
                    android:paddingLeft="@dimen/d16"
                    android:paddingRight="@dimen/d16"
                    android:paddingTop="@dimen/d8">
                    <ImageView
                        android:layout_width="@dimen/d50"
                        android:layout_height="@dimen/d50"
                        android:background="@color/primary_light"
                        android:padding="@dimen/d8"
                        android:src="@drawable/logo"/>
                    <Button
                        android:id="@+id/Kuningan"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/d16"
                        android:background="@color/primary_light"
                        android:gravity="center"
                        android:padding="@dimen/d8"
                        android:text="@string/Kuningan"
                        android:textSize="@dimen/s18"/>
                </LinearLayout>

            [11:19]
            <!--Konservasi-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/d8"
                    android:paddingLeft="@dimen/d16"
                    android:paddingRight="@dimen/d16"
                    android:paddingTop="@dimen/d8">
                    <ImageView
                        android:layout_width="@dimen/d50"
                        android:layout_height="@dimen/d50"
                        android:background="@color/primary_light"
                        android:padding="@dimen/d8"
                        android:src="@drawable/logo"/>

                    <Button
                        android:id="@+id/Konservasi"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/d16"
                        android:background="@color/primary_light"
                        android:gravity="center"
                        android:padding="@dimen/d8"
                        android:text="@string/Konservasi"
                        android:textSize="@dimen/s18" />
                </LinearLayout>


            [11:19]
            <!--Seni-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/d8"
                    android:paddingLeft="@dimen/d16"
                    android:paddingRight="@dimen/d16"
                    android:paddingTop="@dimen/d8">
                    <ImageView
                        android:layout_width="@dimen/d50"
                        android:layout_height="@dimen/d50"
                        android:background="@color/primary_light"
                        android:padding="@dimen/d8"
                        android:src="@drawable/logo"/>
                    <Button
                        android:id="@+id/Seni"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/d16"
                        android:background="@color/primary_light"
                        android:gravity="center"
                        android:padding="@dimen/d8"
                        android:text="@string/Seni"
                        android:textSize="@dimen/s18"/>
                </LinearLayout>

            <!--Media-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/d8"
                android:paddingLeft="@dimen/d16"
                android:paddingRight="@dimen/d16"
                android:paddingTop="@dimen/d8">
                <ImageView
                    android:layout_width="@dimen/d50"
                    android:layout_height="@dimen/d50"
                    android:background="@color/primary_light"
                    android:padding="@dimen/d8"
                    android:src="@drawable/logo"/>
                <Button
                    android:id="@+id/Media"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/d16"
                    android:background="@color/primary_light"
                    android:gravity="center"
                    android:padding="@dimen/d8"
                    android:text="@string/Media"
                    android:textSize="@dimen/s18"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/d8"
                android:paddingLeft="@dimen/d16"
                android:paddingRight="@dimen/d16"
                android:paddingTop="@dimen/d8">
                <ImageView
                    android:layout_width="@dimen/d50"
                    android:layout_height="@dimen/d50"
                    android:background="@color/primary_light"
                    android:padding="@dimen/d8"
                    android:src="@drawable/logo"/>
                <Button
                    android:id="@+id/Search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/d16"
                    android:background="@color/primary_light"
                    android:gravity="center"
                    android:padding="@dimen/d8"
                    android:text="@string/Search"
                    android:textSize="@dimen/s18"/>
            </LinearLayout>

            <!--About-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/d8"
                android:paddingLeft="@dimen/d16"
                android:paddingRight="@dimen/d16"
                android:paddingTop="@dimen/d8">
                <ImageView
                    android:layout_width="@dimen/d50"
                    android:layout_height="@dimen/d50"
                    android:background="@color/primary_light"
                    android:padding="@dimen/d8"
                    android:src="@drawable/logo"/>
                <Button
                    android:id="@+id/About"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/d16"
                    android:background="@color/primary_light"
                    android:gravity="center"
                    android:padding="@dimen/d8"
                    android:text="@string/About"
                    android:textSize="@dimen/s18"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</ScrollView>