<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/natural"
    tools:context=".Konservasi">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/d150">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/d150"
                android:scaleType="centerCrop"
                android:src="@drawable/background" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@color/primary_light"
                android:padding="@dimen/d8"
                android:text="Konservasi Alam"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/s24"/>
        </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <!--TNGC-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/d8"
            android:paddingLeft="@dimen/d16"
            android:paddingRight="@dimen/d16"
            android:paddingTop="@dimen/d8">

            <ImageView
                android:layout_width="@dimen/d50"
                android:layout_height="@dimen/d50"
                android:background="@color/primary_light"
                android:padding="@dimen/d8"
                android:src="@drawable/logo" />

            <Button
                android:id="@+id/Taman"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/d16"
                android:background="@color/primary_light"
                android:gravity="center"
                android:padding="@dimen/d8"
                android:text="@string/Taman"
                android:textSize="@dimen/s18" />
        </LinearLayout>

        [11:19]
        <!--Kebun Raya-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/d8"
            android:paddingLeft="@dimen/d16"
            android:paddingRight="@dimen/d16"
            android:paddingTop="@dimen/d8">

            <ImageView
                android:layout_width="@dimen/d50"
                android:layout_height="@dimen/d50"
                android:background="@color/primary_light"
                android:padding="@dimen/d8"
                android:src="@drawable/logo" />

            <Button
                android:id="@+id/Kebun"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/d16"
                android:background="@color/primary_light"
                android:padding="@dimen/d8"
                android:text="@string/Kebun"
                android:textSize="@dimen/s18" />
        </LinearLayout>


        [11:19]
        <!--Gunung Tilu-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/d8"
            android:paddingLeft="@dimen/d16"
            android:paddingRight="@dimen/d16"
            android:paddingTop="@dimen/d8">

            <ImageView
                android:layout_width="@dimen/d50"
                android:layout_height="@dimen/d50"
                android:background="@color/primary_light"
                android:padding="@dimen/d8"
                android:src="@drawable/logo" />

            <Button
                android:id="@+id/Tilu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/d16"
                android:background="@color/primary_light"
                android:gravity="center"
                android:padding="@dimen/d8"
                android:text="@string/Tilu"
                android:textSize="@dimen/s18" />
        </LinearLayout>

        <!--Gunung Ciremai-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/d8"
            android:paddingLeft="@dimen/d16"
            android:paddingRight="@dimen/d16"
            android:paddingTop="@dimen/d8">

            <ImageView
                android:layout_width="@dimen/d50"
                android:layout_height="@dimen/d50"
                android:background="@color/primary_light"
                android:padding="@dimen/d8"
                android:src="@drawable/logo" />

            <Button
                android:id="@+id/Ciremai"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/d16"
                android:background="@color/primary_light"
                android:gravity="center"
                android:padding="@dimen/d8"
                android:text="@string/Ciremai"
                android:textSize="@dimen/s18" />
        </LinearLayout>

    </LinearLayout>

    </LinearLayout>

</LinearLayout>